deck view bug fixed